# dlh_duty_plan_converter

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
.github/workflows/: on tag deploy on github.yaml
db_migrations/: 001_1.0.0.sql  002_2.0.0.sql
db_migrations/1-2.3.0/: down.sql  up.sql
src/: api_response.rs  config.rs  connect_to_db.rs  dateperhapstime_to_string.rs  duty_plan_event.rs  error.rs  event_type.rs  is_archived.rs  load_calendar.rs  main.rs  main_inner.rs  transform_calendar_event.rs  update_calendar.rs  update_data.rs  update_db.rs
